--- a/P_control.ui
+++ b/P_control.ui
@@ -48,38 +48,5 @@
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>verticalSlider</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>doubleSpinBox</receiver>
-   <slot>stepUp()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>85</x>
-     <y>162</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>117</x>
-     <y>46</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>doubleSpinBox</sender>
-   <signal>valueChanged(double)</signal>
-   <receiver>verticalSlider</receiver>
-   <slot>addStep()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>100</x>
-     <y>58</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>73</x>
-     <y>142</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
