--- a/PVE_control.ui
+++ b/PVE_control.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>378</width>
-    <height>332</height>
+    <width>449</width>
+    <height>331</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -198,6 +198,55 @@
        <property name="checked">
         <bool>true</bool>
        </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="0" column="4">
+    <layout class="QGridLayout" name="gridLayout_6">
+     <item row="0" column="0">
+      <widget class="QGroupBox" name="EOSgroupBox">
+       <property name="maximumSize">
+        <size>
+         <width>80</width>
+         <height>500</height>
+        </size>
+       </property>
+       <property name="title">
+        <string>EOS</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+       <widget class="QRadioButton" name="Ideal_button">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>20</y>
+          <width>121</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Ideal</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="Shaw_button">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>40</y>
+          <width>107</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Shaw</string>
+        </property>
+       </widget>
       </widget>
      </item>
     </layout>
